Fix(gallery.html): final fix gap issue(needed to reduce logo height)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ h2 {
 }
 
 .logo {
-  height: 60px; /* Adjust height */
+  height: 50px; /* Adjust height */
   width: auto; /* Maintain aspect ratio */
 }
 
